# mac

./: mac.cabal  stack.yaml
Examples/: Examples.hs
MAC/: Control.hs  Core.hs  Effects.hs  Exception.hs  MAC.hs  MVar.hs
mac/: GNUmakefile  mac.cabal  stack.yaml
mac-examples/: mac-examples.cabal  stack.yaml
mac-examples/src/: Examples.hs
mac-examples/src/Examples/: Alice0.hs  Alice1.hs  Alice2.hs  Alice3.hs  Alice4.hs  Bob0.hs  Bob1.hs  Bob2.hs  Bob3.hs  Bob4.hs  MACWget.hs
mac/MAC/: Core.hs  Exception.hs  Labeled.hs  Lattice.hs  MAC.hs  Ref.hs
