name:                mac-examples
version:             0.2.0.0
license:             BSD3
license-file:        LICENSE
author:              Alejandro Russo
maintainer:          russo@chalmers.se
category:            Security
synopsis:            Example usage of the mac libary
build-type:          Simple
cabal-version:       >=1.10


description:         Examples using the mac library.

extra-source-files:  stack.yaml

-- TODO: Make an executable for each example like here:
-- https://github.com/benl23x5/gloss/blob/master/gloss-examples/gloss-examples.cabal
library
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.*
                     , exceptions == 0.8.*
                     , http-conduit == 2.2.*
                     , mac == 0.2.*
                     , split == 0.2.*

  default-extensions:  MultiParamTypeClasses
  other-extensions:    Safe, Trustworthy

  default-language:    Haskell98

  other-modules:       Examples
                       Examples.Alice4
                     , Examples.Alice1
                     , Examples.Bob2
                     , Examples.Bob3
                     , Examples.MACWget
                     , Examples.Alice3
                     , Examples.Bob1
                     , Examples.Alice2
                     , Examples.Bob0
                     , Examples.Alice0
                     , Examples.Bob4

  hs-source-dirs:      src

Source-repository head
  Type:     git
  Location: http://russo@bitbucket.org/russo/mac-lib.git
